--- a/ui/package.json
+++ b/ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stomp/stompjs": "^6.1.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +11,8 @@
     "@types/node": "^16.11.14",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "antd": "^4.17.3",
     "axios": "^0.24.0",
     "prettier": "^2.5.1",
@@ -17,9 +20,15 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.34.5",
     "react-scripts": "5.0.0",
+    "react-stomp": "^5.1.0",
+    "react-stomp-client": "^1.2.0",
+    "react-use": "^17.3.2",
+    "react-use-websocket": "^3.0.0",
     "sass": "^1.45.0",
+    "sockjs-client": "^1.6.0",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
